--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
         socket.on('mensaje', (payload) => {
             console.log('Escuchando al backedn: ' + payload)
         })
+
+
+        socket.on('nuevo-mensaje', (payload) => {
+            console.log('Escuchando desde flutter: ' + payload.mensaje)
+        })
+
+        socket.on('active-bands', (payload) => {
+            console.clear()
+            console.table(payload)
+        })
     </script>
 </body>
 
